--- a/kubernetes/index.html
+++ b/kubernetes/index.html
@@ -57,6 +57,21 @@
       </div>
     </div>
   </div>
+
+  <div style="display: block; padding-top: 20px; width: 800px">
+      <h3>About this COVID-19 tracker</h3>
+      <p>
+          <a href="https://scientist.com/">Scientist.com</a>'s data team is contributing insight to the severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2) viral outbreak currently impacting communities worldwide. Our goal is to provide up to the hour data, but in practice our source data streams can lag and we may be up to a day behind.
+      </p>
+
+      <p>
+          The data is taken from the Johns Hopkins University Center for Systems Science and Engineering open data repository. Find the repo here <a href="https://github.com/CSSEGISandData/COVID-19/">https://github.com/CSSEGISandData/COVID-19/</a>. Look in the <pre style="display: inline">csse_covid_19_data/csse_covid_19_time_series</pre> folder for the raw data.
+      </p>
+
+      <p>
+          The data is lightly processed, normalizing US states and French territories. You can find that data processing tool here: <a href="https://github.com/assaydepot/dracula-covid19">https://github.com/assaydepot/dracula-covid19</a>.
+      </p>
+  </div>
   <script type='text/javascript'>
     var divElement = document.getElementById('viz1584303880417');
     var vizElement = divElement.getElementsByTagName('object')[0];
