--- a/kubernetes/index.html
+++ b/kubernetes/index.html
@@ -44,7 +44,7 @@
               <param name='embed_code_version' value='3' />
               <param name='site_root' value='' />
               <param name='name' value='covid_tracker&#47;Overview' />
-              <param name='tabs' value='no' />
+              <param name='tabs' value='yes' />
               <param name='toolbar' value='yes' />
               <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;co&#47;covid_tracker&#47;Overview&#47;1.png' />
               <param name='animate_transition' value='yes' />
