Fix the padding

--- a/kubernetes/index.html
+++ b/kubernetes/index.html
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row mb-5 pb-5">
         <div class="col-12">
           <h3>About this COVID-19 tracker</h3>
           <p>
