Fixing the form

--- a/kubernetes/index.html
+++ b/kubernetes/index.html
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-      <div class="row mb-5 pb-5">
+      <div class="row">
         <div class="col-12">
           <h3>About this COVID-19 tracker</h3>
           <p>
@@ -76,7 +76,31 @@
           </p>
         </div>
       </div>
-      <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us8.list-manage.com","uuid":"d2a08e5a1764933fccdacf71a","lid":"3710c59025","uniqueMethods":true}) })</script>
+
+      <div class="row">
+        <div class="col-12">
+          <!-- Begin Mailchimp Signup Form -->
+          <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+          <style type="text/css">
+          	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+          	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+          	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+          </style>
+          <div id="mc_embed_signup">
+          <form action="https://assaydepot.us8.list-manage.com/subscribe/post?u=d2a08e5a1764933fccdacf71a&amp;id=3710c59025" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div id="mc_embed_signup_scroll">
+          	<label for="mce-EMAIL">Subscribe</label>
+          	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d2a08e5a1764933fccdacf71a_3710c59025" tabindex="-1" value=""></div>
+              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+              </div>
+          </form>
+          </div>
+
+          <!--End mc_embed_signup-->
+        </div>
+      </div>
     </div>
     <script type='text/javascript'>
       var divElement = document.getElementById('viz1584303880417');
