--- a/kubernetes/index.html
+++ b/kubernetes/index.html
@@ -23,7 +23,7 @@
     img#main-logo {
       height: 50px;
     }
-    @media (min-width: 1200px) {
+    @media {
     .container{
         max-width: 1200px;
     }
