remove pre block

--- a/kubernetes/index.html
+++ b/kubernetes/index.html
@@ -70,7 +70,7 @@
           </p>
 
           <p>
-            The data is taken from the Johns Hopkins University Center for Systems Science and Engineering open data repository. Find the repo here <a href="https://github.com/CSSEGISandData/COVID-19/">https://github.com/CSSEGISandData/COVID-19/</a>. Look in the <pre style="display: inline">csse_covid_19_data/csse_covid_19_time_series</pre> folder for the raw data.
+            The data is taken from the Johns Hopkins University Center for Systems Science and Engineering open data repository. Find the repo here <a href="https://github.com/CSSEGISandData/COVID-19/">https://github.com/CSSEGISandData/COVID-19/</a>. Look in the <em>csse_covid_19_data / csse_covid_19_time_series</em> folder for the raw data.
           </p>
 
           <p>
