--- a/kubernetes/index.html
+++ b/kubernetes/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
@@ -25,10 +26,16 @@
       height: 50px;
     }
     @media {
-    .container{
-        max-width: 1200px;
+        .container{
+            max-width: 1200px;
+        }
     }
-}
+    </style>
+    
+    <style>
+      #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+      /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+         We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
     </style>
   </head>
   <body id="main">
@@ -87,11 +94,6 @@
         <div class="col-12">
           <!-- Begin Mailchimp Signup Form -->
           <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-          <style type="text/css">
-          	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-          	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-          	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-          </style>
           <div id="mc_embed_signup">
           <form action="https://assaydepot.us8.list-manage.com/subscribe/post?u=d2a08e5a1764933fccdacf71a&amp;id=3710c59025" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
               <div id="mc_embed_signup_scroll">
@@ -108,7 +110,7 @@
         </div>
       </div>
     </div>
-    <script type='text/javascript'>
+    <script>
       var divElement = document.getElementById('viz1584303880417');
       var vizElement = divElement.getElementsByTagName('object')[0];
       if (divElement.offsetWidth > 800) {
